fixed navbar z-index and useEffect problems

--- a/src/components/General_Components/Navbar/SearchByRegion/SearchByRegion.scss
+++ b/src/components/General_Components/Navbar/SearchByRegion/SearchByRegion.scss
@@ -6,11 +6,12 @@
      position: absolute;
      top: 8.5rem;
      left: 20%;
-     z-index: 1;
+     z-index: -1;
      opacity: 0;
      transition: opacity .3s;
      padding-top: 1rem;
      padding-left: 1rem;
+     border:.5px solid #e2e2e2;
 }
 .offcanvas-body{
      text-align: center;
